--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -16,6 +16,12 @@
             android:layout_height="wrap_content"
             android:text="Register"/>
         <EditText
+            android:id="@+id/etDisplayName"
+            style="@style/editText_Style"
+            android:hint="Display Name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <EditText
             android:id="@+id/etUsername"
             style="@style/editText_Style"
             android:hint="Username"
