--- a/app/src/main/res/layout/activity_news__detail__list.xml
+++ b/app/src/main/res/layout/activity_news__detail__list.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.example.evitected.workshop.News_Detail_ListActivity">
     <LinearLayout
+        style="@style/textStyle_List"
         android:padding="10dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
