ListView and DetailNews

--- a/app/src/main/res/layout/activity_news__detail__list.xml
+++ b/app/src/main/res/layout/activity_news__detail__list.xml
@@ -22,6 +22,7 @@
             android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/tvTopicNews"
+                android:textColor="#000000"
                 android:textSize="15sp"
                 android:textStyle="bold"
                 android:gravity="center_vertical"
@@ -30,6 +31,7 @@
                 android:layout_height="45dp" />
             <TextView
                 android:id="@+id/tvTopicDate"
+                android:textColor="#000000"
                 android:textSize="15sp"
                 android:gravity="center_vertical"
                 android:text="5 ตุลาคม 2559"
