--- a/app/src/main/res/layout/activity_detail__news.xml
+++ b/app/src/main/res/layout/activity_detail__news.xml
@@ -15,6 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="250dp" />
         <TextView
+            android:id="@+id/DtvTopicNews"
             android:text="Topic News"
             android:textSize="15sp"
             android:layout_marginTop="20dp"
@@ -23,6 +24,7 @@
             android:layout_height="wrap_content" />
 
         <TextView
+            android:id="@+id/DtvDetailNews"
             android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaasdasdasdadsadsadaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaasd,asld asl;dk;as dkla ksldkla; ks;ldk;akls;kdl; akskd ak;skd;l aksl;kd d ;laskdl; askd;l al;skd; kalskl; kaskdl;ak;ld sad alsld;k alskd;k sakd kasdo ;aksdk ;oaksdo;as;d ksad;asko; dkas dko;asds"
             android:textSize="15sp"
             android:layout_margin="20dp"
