--- a/app/src/main/res/layout/activity_detail__news.xml
+++ b/app/src/main/res/layout/activity_detail__news.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ImageView
+            android:id="@+id/imgDetail"
             android:layout_marginTop="15dp"
             android:src="@mipmap/ic_launcher"
             android:layout_width="match_parent"
